添加耽美模块

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
 
     <string name="news">首页</string>
     <string name="video">视频</string>
+    <string name="new_beauty">耽美</string>
     <string name="topic">话题</string>
     <string name="beauty">美文</string>
     <string name="profile">我的</string>
