修复排序逻辑bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="video">视频</string>
     <string name="new_beauty">耽美</string>
     <string name="topic">话题</string>
-    <string name="beauty">美文</string>
+    <string name="beauty">潮流</string>
     <string name="profile">我的</string>
 
     <string name="fail_load_content">加载内容失败</string>
