--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">MM拍</string>
+    <string name="app_name">M拍</string>
 
     <!--消息设置-->
     <string name="real_photo_message">只接受真实头像的消息</string>
@@ -34,4 +34,5 @@
     <string name="edit">编辑</string>
     <string name="submit">提交</string>
     <string name="input_word">请输入文字</string>
+    <string name="test_word">我\n们\n是123\nqqqq</string>
 </resources>
