--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="camera_permission">相机</string>
     <string name="microphone_permission">麦克风</string>
     <string name="divider">、</string>
+    <string name="already_praise">你已经点赞了</string>
 </resources>
